--- a/src/components/Section/Section.module.scss
+++ b/src/components/Section/Section.module.scss
@@ -35,7 +35,7 @@
   width: 100%;
   height: 100%;
 
-  background-image: url("../../public/grid.svg");
+  background-image: url("../../../public/grid.svg");
   transform: rotate(180deg);
   mask-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.3) 100%);
 }
