--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,5 +1,6 @@
 :root {
   --theme-ui-colors-background: rgba(12,10,29,1.0);
+  --theme-ui-colors-background-secondary: rgb(29, 18, 41);
   --theme-ui-colors-text: rgba(255,255,255,0.88);
   --theme-ui-colors-text-light: rgba(255,255,255,0.72);
   --theme-ui-colors-primary: rgba(111,76,255,0.88);
@@ -7,6 +8,24 @@
   --theme-ui-colors-secondary: rgba(111, 76, 255, 0.08);
   --theme-ui-colors-tertiary: rgba(255,255,255,0.08);
   --theme-ui-colors-border: #202020;
+  --theme-ui-colors-warning: #FFA542;
+  --theme-ui-colors-error: #ED4A6D;
+  --theme-ui-colors-success: #4BCA81;
+
+  --theme-ui-shadows-box: 0 0 32px 0 rgb(88 47 213 / 32%), 0 0 8px 0 rgb(88 47 213 / 48%);
+  --theme-ui-shadows-text: 0 0 80px rgb(192 219 255 / 48%), 0 0 32px rgb(65 120 255 / 24%);
+}
+
+[data-theme='light'] {
+  --theme-ui-colors-background: rgb(250, 250, 250);
+  --theme-ui-colors-background-secondary: rgb(250, 250, 250); // we are using border shadow here, so it's the same as primary
+  --theme-ui-colors-text: rgba(0,0,0,0.88);
+  --theme-ui-colors-text-light: rgba(0,0,0,0.72);
+  --theme-ui-colors-primary: rgba(111,76,255,0.88);
+  --theme-ui-colors-primary-hover: rgba(111,76,255,1);
+  --theme-ui-colors-secondary: rgba(111, 76, 255, 0.08);
+  --theme-ui-colors-tertiary: rgba(255,255,255,0.08);
+  --theme-ui-colors-border: #d4d4d4;
   --theme-ui-colors-warning: #FFA542;
   --theme-ui-colors-error: #ED4A6D;
   --theme-ui-colors-success: #4BCA81;
