--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -7,6 +7,7 @@
   --theme-ui-colors-primary-hover: rgba(111,76,255,1);
   --theme-ui-colors-secondary: rgba(111, 76, 255, 0.08);
   --theme-ui-colors-tertiary: rgba(255,255,255,0.08);
+  --theme-ui-colors-header: #0c0a1de0;
   --theme-ui-colors-border: #202020;
   --theme-ui-colors-warning: #FFA542;
   --theme-ui-colors-error: #ED4A6D;
@@ -26,6 +27,7 @@
   --theme-ui-colors-secondary: rgba(111, 76, 255, 0.08);
   --theme-ui-colors-tertiary: rgba(255,255,255,0.08);
   --theme-ui-colors-border: #d4d4d4;
+  --theme-ui-colors-header: #f6f6f6;
   --theme-ui-colors-warning: #FFA542;
   --theme-ui-colors-error: #ED4A6D;
   --theme-ui-colors-success: #4BCA81;
