--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -7,7 +7,7 @@
   transform: translateY(0%);
   opacity: 1;
   background-color: var(--theme-ui-colors-header);
-  backdrop-filter: blur(1rem);
+  backdrop-filter: blur(2rem);
   border-bottom: 1px solid var(--theme-ui-colors-border);
 
   transition: all 0.5s;
@@ -17,10 +17,21 @@
     opacity: 0;
   }
 
+  padding: 0rem 4rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
   & > div {
-    padding: 0rem 4rem;
     display: flex;
-    justify-content: space-between;
     align-items: center;
+  }
+
+  h3 {
+    margin-right: 1.5rem;
+  }
+
+  a, button {
+    margin: 0 0.5rem;
   }
 }
