add themes, change globals, outlined for active

--- a/src/domain/Features/Features.module.scss
+++ b/src/domain/Features/Features.module.scss
@@ -1,6 +1,5 @@
 .grid {
   width: 100%;
-  max-width: 900px;
 
   display: flex;
   flex-wrap: wrap;
@@ -43,6 +42,8 @@
 }
 
 .rotate {
+  height: 150px;
+
   svg {
     transform: rotate(90deg);
   }
