--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -21,8 +21,8 @@
 [data-theme='light'] {
   --theme-ui-colors-background: rgb(250, 250, 250);
   --theme-ui-colors-background-secondary: rgb(245, 245, 245);
-  --theme-ui-colors-text: rgba(0,0,0,0.88);
-  --theme-ui-colors-text-light: rgba(0,0,0,0.72);
+  --theme-ui-colors-text: rgba(22, 22, 22, 0.88);
+  --theme-ui-colors-text-light: rgba(22,22,22,0.72);
   --theme-ui-colors-primary: rgba(8,61,119,0.88);
   --theme-ui-colors-primary-hover: rgba(8,61,119,1);
   --theme-ui-colors-secondary: rgb(160,54,27);
