--- a/src/domain/Composition/Composition.module.scss
+++ b/src/domain/Composition/Composition.module.scss
@@ -1,21 +1,10 @@
 .container {
+  width: 100%;
+
   display: flex;
-
-  @media screen and (max-width: 800px) {
-    flex-direction: column;
-  }
-}
-
-.pane {
-  padding-top: 1rem;
-
-  width: 40vw;
+  align-items: stretch;
 
   @media screen and (max-width: 920px) {
-    padding-top: 0rem;
-  }
-
-  &::not(:last-of-type) {
-    padding-right: 1rem;
+    flex-direction: column;
   }
 }
